--- a/Application.Web/Application.Web.csproj
+++ b/Application.Web/Application.Web.csproj
@@ -219,6 +219,10 @@
     <Content Include="Views\Exames\AlterarExame.cshtml" />
     <Content Include="Views\Exames\Excluir.cshtml" />
     <Content Include="Views\Consultas\Index.cshtml" />
+    <Content Include="Views\Consultas\NovaConsulta.cshtml" />
+    <Content Include="Views\Consultas\VisualizarConsulta.cshtml" />
+    <Content Include="Views\Consultas\AlterarConsulta.cshtml" />
+    <Content Include="Views\Consultas\Excluir.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
