--- a/Application.Web/Web.config
+++ b/Application.Web/Web.config
@@ -18,6 +18,7 @@
     <add name="MarcacaoConsulta" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MarcacaoConsulta;Integrated Security=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+	<globalization culture="pt-BR" uiCulture="pt-BR" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
