Alert de Consulta agendada caso haja outra na mesma data e hora.

--- a/Application.Web/Application.Web.csproj
+++ b/Application.Web/Application.Web.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PacientesController.cs" />
     <Compile Include="Controllers\TipoExamesController.cs" />
+    <Compile Include="Extensions\NotificationExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -222,6 +223,7 @@
     <Content Include="Views\Consultas\VisualizarConsulta.cshtml" />
     <Content Include="Views\Consultas\AlterarConsulta.cshtml" />
     <Content Include="Views\Consultas\Excluir.cshtml" />
+    <Content Include="Views\Shared\_Notifications.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
